--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Slimefun DEV
 
 on:
@@ -26,28 +23,10 @@ jobs:
           cache: maven
       - name: Codestyle check
         run: mvn -s .mvn/settings.xml -B spotless:check --errors
-      - name: Publish snapshots
-        run: |
-          echo "::add-mask::$MAVEN_ACCOUNT"
-          echo "::add-mask::$MAVEN_PASSWORD"
-          mvn -s .mvn/settings.xml -B deploy -Dversioning.disable --errors
-        env:
-          MAVEN_ACCOUNT: '${{ vars.MAVEN_ACCOUNT }}'
-          MAVEN_PASSWORD: '${{ secrets.MAVEN_PASSWORD }}'
       - name: Build Slimefun
         run: mvn -s .mvn/settings.xml -B clean package --errors
-      - name: Mask Output
-        run: |
-          echo "::add-mask::$CF_API_TOKEN"
-        env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-      - name: Get build artifact filename
-        run: |
-          cd target && FILENAME=$(find . -maxdepth 1 -mindepth 1 -name "Slimefun-*" | cut -d'/' -f 2)
-          echo "SLIMEFUN_ARTIFACT_NAME=$FILENAME" >> "$GITHUB_ENV"
-          cd ..
-      - name: Upload Build to R2
-        uses: cloudflare/wrangler-action@v3
+      - name: Upload Slimefun-4-Folia jar
+        uses: actions/upload-artifact@v4
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          command: "r2 object put slimefun-dev/${{ env.SLIMEFUN_ARTIFACT_NAME }} --file=./target/${{ env.SLIMEFUN_ARTIFACT_NAME }} --content-type=application/java-archive"
+          name: Slimefun-4-Folia
+          path: build/libs/*
