--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,7 @@
         <dependency>
             <groupId>io.github.baked-libs</groupId>
             <artifactId>dough-api</artifactId>
-            <version>1.3.1-Folia</version>
+            <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
