--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -21,8 +21,24 @@ jobs:
           java-package: jdk
           architecture: x64
           cache: maven
-      - name: Install local dependencies
-        run: mvn clean install -DskipTests --errors -B
+
+      - name: Install FoliaAdapter
+        run: |
+          ./mvnw install:install-file \
+            -Dfile=ci-libs/FoliaAdapter-1.0-SNAPSHOT.jar \
+            -DgroupId=com.molean \
+            -DartifactId=FoliaAdapter \
+            -Dversion=1.0-SNAPSHOT \
+            -Dclassifier=dev \
+            -Dpackaging=jar
+      - name: Install dough-api
+        run: |
+          ./mvnw install:install-file \
+            -Dfile=ci-libs/dough-api-1.3.1-Folia.jar \
+            -DgroupId=io.github.baked-libs \
+            -DartifactId=dough-api \
+            -Dversion=1.3.1-Folia \
+            -Dpackaging=jar
       - name: Codestyle check
         run: mvn -s .mvn/settings.xml -B spotless:check --errors
       - name: Build Slimefun
