--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install FoliaAdapter
         run: |
-          ./mvnw install:install-file \
+          mvn install:install-file \
             -Dfile=ci-libs/FoliaAdapter-1.0-SNAPSHOT.jar \
             -DgroupId=com.molean \
             -DartifactId=FoliaAdapter \
@@ -33,7 +33,7 @@ jobs:
             -Dpackaging=jar
       - name: Install dough-api
         run: |
-          ./mvnw install:install-file \
+          mvn install:install-file \
             -Dfile=ci-libs/dough-api-1.3.1-Folia.jar \
             -DgroupId=io.github.baked-libs \
             -DartifactId=dough-api \
